# StoryAgents

./: .gitignore  README.md  main.py  pyproject.toml
StoryAgent/: __init__.py
StoryAgent/agents/: __init__.py  actor.py  agent.py  controller.py  llm.py  writer.py
StoryAgent/config/: __init__.py  config.py  world_cfg.json
StoryAgent/config/actor_cfg/: forest_shaman.json  mountain_chieftain.json  royal_advisor.json
config/: __init__.py  agents.py  world_rules.py
